# DELPHI

./: .gitignore  CITATION.cff  LICENSE  README.md  download.sh  pyproject.toml  requirements.txt  run_demo.sh  tutorial.md
.github/workflows/: ci.yml
configs/: train_cscc_loocv.yaml  train_her2st_full.yaml  train_her2st_loocv.yaml
data/: README.md
scripts/inference/: infer.py  infer_cscc_zeroshot.py
scripts/preprocessing/: preprocess_cscc.py  preprocess_her2st.py  preprocess_hest_prad.py  preprocess_tcga_wsi.py
scripts/training/: finetune.py  train.py
src/: __init__.py  dataset.py  loss.py  model.py  trainer.py  utils.py
tests/: test_data_integrity.py  test_import.py  test_model_forward.py
